# log_processor

./: .gitreview  .testr.conf  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: Makefile
doc/source/: conf.py  index.rst  installation.rst  operation.rst
log_processor/: client.py
log_processor/tests/: test_client.py
log_processor/tests/fixtures/: client-config.yaml
