[metadata]
name = log_processor
summary = Gearman server and workers for fetching logs over HTTP and injecting them into Logstash.
description-file =
    README.rst
author = OpenStack Infrastructure Team
author-email = openstack-infra@lists.openstack.org
home-page = http://docs.openstack.org/infra/system-config/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    log-processor-client = log_processor.client:main
    log-processor-worker = log_processor.worker:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
